// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobListActions> renders correctly for configurable jobs 1`] = `
<DropdownButton
  component={
    <Menu
      dataTest="dhis2-uicore-menulist"
    >
      <EditJobMenuItem
        id="1"
      />
      <RunJobMenuItem
        id="1"
      />
      <DeleteJobMenuItem
        id="1"
      />
    </Menu>
  }
  dataTest="dhis2-uicore-dropdownbutton"
  small={true}
>
  Actions
</DropdownButton>
`;

exports[`<JobListActions> renders correctly for non configurable jobs 1`] = `
<DropdownButton
  component={
    <Menu
      dataTest="dhis2-uicore-menulist"
    >
      <RunJobMenuItem
        id="1"
      />
      <DeleteJobMenuItem
        id="1"
      />
    </Menu>
  }
  dataTest="dhis2-uicore-dropdownbutton"
  small={true}
>
  Actions
</DropdownButton>
`;
